etapa5/y.output
Terminals unused in grammar

   TOKEN_ERROR


State 46 conflicts: 8 shift/reduce
State 58 conflicts: 1 shift/reduce
State 76 conflicts: 12 shift/reduce
State 80 conflicts: 12 shift/reduce
State 104 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce


Grammar

    0 $accept: P $end

    1 P: PROGRAMA

    2 PROGRAMA: DECLARACOES

    3 DECLARACOES: DECLARACAO DECLARACOES
    4            | /* empty */

    5 DECLARACAO: FUNCOES
    6           | VARIAVEL_GLOBAL ';'

    7 VARIAVEL_GLOBAL: TK_IDENTIFIER ':' TIPO VAR_GLOBAL_INIT_VEC

    8 VAR_GLOBAL_INIT_VEC: VALOR
    9                    | '[' LIT_INTEGER ']' VALOR_INICIALIZACAO_VETOR

   10 VALOR: LIT_INTEGER
   11      | LIT_REAL
   12      | LIT_CHAR

   13 VALOR_INICIALIZACAO_VETOR: VALOR VALOR_INICIALIZACAO_VETOR
   14                          | /* empty */

   15 TIPO: KW_BYTE
   16     | KW_SHORT
   17     | KW_LONG
   18     | KW_FLOAT
   19     | KW_DOUBLE

   20 FUNCOES: CABECALHO CORPO

   21 CABECALHO: TIPO TK_IDENTIFIER '(' LISTA_PARAMETROS ')'

   22 LISTA_PARAMETROS: TIPO TK_IDENTIFIER MAIS_PARAMETROS
   23                 | /* empty */

   24 MAIS_PARAMETROS: ',' TIPO TK_IDENTIFIER MAIS_PARAMETROS
   25                | /* empty */

   26 CORPO: COMANDO ';'

   27 BLOCO_COMANDOS: '{' LISTA_COMANDOS '}'

   28 LISTA_COMANDOS: COMANDO ';' LISTA_COMANDOS
   29               | /* empty */

   30 COMANDO: ATRIBUICAO
   31        | CONTROLE_FLUXO
   32        | READ
   33        | PRINT
   34        | RETURN
   35        | BLOCO_COMANDOS
   36        | /* empty */

   37 ATRIBUICAO: TK_IDENTIFIER '=' EXPRESSAO
   38           | TK_IDENTIFIER '#' EXPRESSAO '=' EXPRESSAO

   39 READ: KW_READ TK_IDENTIFIER

   40 PRINT: KW_PRINT LISTA_ELEMENTOS_PRINT

   41 LISTA_ELEMENTOS_PRINT: ELEMENTO_PRINT LISTA_ELEMENTOS_PRINT
   42                      | ELEMENTO_PRINT

   43 ELEMENTO_PRINT: LIT_STRING
   44               | EXPRESSAO

   45 RETURN: KW_RETURN EXPRESSAO

   46 EXPRESSAO: TK_IDENTIFIER
   47          | TK_IDENTIFIER EXPRESSAO
   48          | TK_IDENTIFIER '(' LISTA_FUNCAO_PARAMETROS ')'
   49          | '-' EXPRESSAO
   50          | LIT_INTEGER
   51          | LIT_REAL
   52          | LIT_CHAR
   53          | '(' EXPRESSAO ')'
   54          | '[' EXPRESSAO ']'
   55          | EXPRESSAO '+' EXPRESSAO
   56          | EXPRESSAO '-' EXPRESSAO
   57          | EXPRESSAO '*' EXPRESSAO
   58          | EXPRESSAO '/' EXPRESSAO
   59          | EXPRESSAO '>' EXPRESSAO
   60          | EXPRESSAO '<' EXPRESSAO
   61          | EXPRESSAO OPERATOR_LE EXPRESSAO
   62          | EXPRESSAO OPERATOR_GE EXPRESSAO
   63          | EXPRESSAO OPERATOR_EQ EXPRESSAO
   64          | EXPRESSAO OPERATOR_NE EXPRESSAO
   65          | EXPRESSAO OPERATOR_AND EXPRESSAO
   66          | EXPRESSAO OPERATOR_OR EXPRESSAO
   67          | '!' EXPRESSAO

   68 LISTA_FUNCAO_PARAMETROS: EXPRESSAO LISTA_FUNCAO_MAIS_PARAMETROS
   69                        | /* empty */

   70 LISTA_FUNCAO_MAIS_PARAMETROS: ',' EXPRESSAO LISTA_FUNCAO_MAIS_PARAMETROS
   71                             | /* empty */

   72 CONTROLE_FLUXO: WHEN_THEN
   73               | WHEN_THEN_ELSE
   74               | FOR
   75               | WHILE

   76 WHEN_THEN: KW_WHEN '(' EXPRESSAO ')' KW_THEN COMANDO

   77 WHEN_THEN_ELSE: KW_WHEN '(' EXPRESSAO ')' KW_THEN COMANDO KW_ELSE COMANDO

   78 WHILE: KW_WHILE '(' EXPRESSAO ')' COMANDO

   79 FOR: KW_FOR '(' TK_IDENTIFIER '=' EXPRESSAO KW_TO EXPRESSAO ')' COMANDO


Terminals, with rules where they appear

$end (0) 0
'!' (33) 67
'#' (35) 38
'(' (40) 21 48 53 76 77 78 79
')' (41) 21 48 53 76 77 78 79
'*' (42) 57
'+' (43) 55
',' (44) 24 70
'-' (45) 49 56
'/' (47) 58
':' (58) 7
';' (59) 6 26 28
'<' (60) 60
'=' (61) 37 38 79
'>' (62) 59
'[' (91) 9 54
']' (93) 9 54
'{' (123) 27
'}' (125) 27
error (256)
KW_TO (258) 79
KW_BYTE (259) 15
KW_SHORT (260) 16
KW_LONG (261) 17
KW_FLOAT (262) 18
KW_DOUBLE (263) 19
KW_WHEN (264) 76 77
KW_THEN (265) 76 77
KW_ELSE (266) 77
KW_WHILE (267) 78
KW_FOR (268) 79
KW_READ (269) 39
KW_RETURN (270) 45
KW_PRINT (271) 40
OPERATOR_LE (272) 61
OPERATOR_GE (273) 62
OPERATOR_EQ (274) 63
OPERATOR_NE (275) 64
OPERATOR_AND (276) 65
OPERATOR_OR (277) 66
TK_IDENTIFIER (278) 7 21 22 24 37 38 39 46 47 48 79
LIT_INTEGER (279) 9 10 50
LIT_REAL (280) 11 51
LIT_CHAR (281) 12 52
LIT_STRING (282) 43
TOKEN_ERROR (283)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
P (48)
    on left: 1, on right: 0
PROGRAMA (49)
    on left: 2, on right: 1
DECLARACOES (50)
    on left: 3 4, on right: 2 3
DECLARACAO (51)
    on left: 5 6, on right: 3
VARIAVEL_GLOBAL (52)
    on left: 7, on right: 6
VAR_GLOBAL_INIT_VEC (53)
    on left: 8 9, on right: 7
VALOR (54)
    on left: 10 11 12, on right: 8 13
VALOR_INICIALIZACAO_VETOR (55)
    on left: 13 14, on right: 9 13
TIPO (56)
    on left: 15 16 17 18 19, on right: 7 21 22 24
FUNCOES (57)
    on left: 20, on right: 5
CABECALHO (58)
    on left: 21, on right: 20
LISTA_PARAMETROS (59)
    on left: 22 23, on right: 21
MAIS_PARAMETROS (60)
    on left: 24 25, on right: 22 24
CORPO (61)
    on left: 26, on right: 20
BLOCO_COMANDOS (62)
    on left: 27, on right: 35
LISTA_COMANDOS (63)
    on left: 28 29, on right: 27 28
COMANDO (64)
    on left: 30 31 32 33 34 35 36, on right: 26 28 76 77 78 79
ATRIBUICAO (65)
    on left: 37 38, on right: 30
READ (66)
    on left: 39, on right: 32
PRINT (67)
    on left: 40, on right: 33
LISTA_ELEMENTOS_PRINT (68)
    on left: 41 42, on right: 40 41
ELEMENTO_PRINT (69)
    on left: 43 44, on right: 41 42
RETURN (70)
    on left: 45, on right: 34
EXPRESSAO (71)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65 66 67, on right: 37 38 44 45 47 49 53 54 55 56 57 58 59 60
    61 62 63 64 65 66 67 68 70 76 77 78 79
LISTA_FUNCAO_PARAMETROS (72)
    on left: 68 69, on right: 48
LISTA_FUNCAO_MAIS_PARAMETROS (73)
    on left: 70 71, on right: 68 70
CONTROLE_FLUXO (74)
    on left: 72 73 74 75, on right: 31
WHEN_THEN (75)
    on left: 76, on right: 72
WHEN_THEN_ELSE (76)
    on left: 77, on right: 73
WHILE (77)
    on left: 78, on right: 75
FOR (78)
    on left: 79, on right: 74


state 0

    0 $accept: . P $end

    KW_BYTE        shift, and go to state 1
    KW_SHORT       shift, and go to state 2
    KW_LONG        shift, and go to state 3
    KW_FLOAT       shift, and go to state 4
    KW_DOUBLE      shift, and go to state 5
    TK_IDENTIFIER  shift, and go to state 6

    $default  reduce using rule 4 (DECLARACOES)

    P                go to state 7
    PROGRAMA         go to state 8
    DECLARACOES      go to state 9
    DECLARACAO       go to state 10
    VARIAVEL_GLOBAL  go to state 11
    TIPO             go to state 12
    FUNCOES          go to state 13
    CABECALHO        go to state 14


state 1

   15 TIPO: KW_BYTE .

    $default  reduce using rule 15 (TIPO)


state 2

   16 TIPO: KW_SHORT .

    $default  reduce using rule 16 (TIPO)


state 3

   17 TIPO: KW_LONG .

    $default  reduce using rule 17 (TIPO)


state 4

   18 TIPO: KW_FLOAT .

    $default  reduce using rule 18 (TIPO)


state 5

   19 TIPO: KW_DOUBLE .

    $default  reduce using rule 19 (TIPO)


state 6

    7 VARIAVEL_GLOBAL: TK_IDENTIFIER . ':' TIPO VAR_GLOBAL_INIT_VEC

    ':'  shift, and go to state 15


state 7

    0 $accept: P . $end

    $end  shift, and go to state 16


state 8

    1 P: PROGRAMA .

    $default  reduce using rule 1 (P)


state 9

    2 PROGRAMA: DECLARACOES .

    $default  reduce using rule 2 (PROGRAMA)


state 10

    3 DECLARACOES: DECLARACAO . DECLARACOES

    KW_BYTE        shift, and go to state 1
    KW_SHORT       shift, and go to state 2
    KW_LONG        shift, and go to state 3
    KW_FLOAT       shift, and go to state 4
    KW_DOUBLE      shift, and go to state 5
    TK_IDENTIFIER  shift, and go to state 6

    $default  reduce using rule 4 (DECLARACOES)

    DECLARACOES      go to state 17
    DECLARACAO       go to state 10
    VARIAVEL_GLOBAL  go to state 11
    TIPO             go to state 12
    FUNCOES          go to state 13
    CABECALHO        go to state 14


state 11

    6 DECLARACAO: VARIAVEL_GLOBAL . ';'

    ';'  shift, and go to state 18


state 12

   21 CABECALHO: TIPO . TK_IDENTIFIER '(' LISTA_PARAMETROS ')'

    TK_IDENTIFIER  shift, and go to state 19


state 13

    5 DECLARACAO: FUNCOES .

    $default  reduce using rule 5 (DECLARACAO)


state 14

   20 FUNCOES: CABECALHO . CORPO

    KW_WHEN        shift, and go to state 20
    KW_WHILE       shift, and go to state 21
    KW_FOR         shift, and go to state 22
    KW_READ        shift, and go to state 23
    KW_RETURN      shift, and go to state 24
    KW_PRINT       shift, and go to state 25
    TK_IDENTIFIER  shift, and go to state 26
    '{'            shift, and go to state 27

    $default  reduce using rule 36 (COMANDO)

    CORPO           go to state 28
    BLOCO_COMANDOS  go to state 29
    COMANDO         go to state 30
    ATRIBUICAO      go to state 31
    READ            go to state 32
    PRINT           go to state 33
    RETURN          go to state 34
    CONTROLE_FLUXO  go to state 35
    WHEN_THEN       go to state 36
    WHEN_THEN_ELSE  go to state 37
    WHILE           go to state 38
    FOR             go to state 39


state 15

    7 VARIAVEL_GLOBAL: TK_IDENTIFIER ':' . TIPO VAR_GLOBAL_INIT_VEC

    KW_BYTE    shift, and go to state 1
    KW_SHORT   shift, and go to state 2
    KW_LONG    shift, and go to state 3
    KW_FLOAT   shift, and go to state 4
    KW_DOUBLE  shift, and go to state 5

    TIPO  go to state 40


state 16

    0 $accept: P $end .

    $default  accept


state 17

    3 DECLARACOES: DECLARACAO DECLARACOES .

    $default  reduce using rule 3 (DECLARACOES)


state 18

    6 DECLARACAO: VARIAVEL_GLOBAL ';' .

    $default  reduce using rule 6 (DECLARACAO)


state 19

   21 CABECALHO: TIPO TK_IDENTIFIER . '(' LISTA_PARAMETROS ')'

    '('  shift, and go to state 41


state 20

   76 WHEN_THEN: KW_WHEN . '(' EXPRESSAO ')' KW_THEN COMANDO
   77 WHEN_THEN_ELSE: KW_WHEN . '(' EXPRESSAO ')' KW_THEN COMANDO KW_ELSE COMANDO

    '('  shift, and go to state 42


state 21

   78 WHILE: KW_WHILE . '(' EXPRESSAO ')' COMANDO

    '('  shift, and go to state 43


state 22

   79 FOR: KW_FOR . '(' TK_IDENTIFIER '=' EXPRESSAO KW_TO EXPRESSAO ')' COMANDO

    '('  shift, and go to state 44


state 23

   39 READ: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 45


state 24

   45 RETURN: KW_RETURN . EXPRESSAO

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 52
    '!'            shift, and go to state 53

    EXPRESSAO  go to state 54


state 25

   40 PRINT: KW_PRINT . LISTA_ELEMENTOS_PRINT

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    LIT_STRING     shift, and go to state 55
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 52
    '!'            shift, and go to state 53

    LISTA_ELEMENTOS_PRINT  go to state 56
    ELEMENTO_PRINT         go to state 57
    EXPRESSAO              go to state 58


state 26

   37 ATRIBUICAO: TK_IDENTIFIER . '=' EXPRESSAO
   38           | TK_IDENTIFIER . '#' EXPRESSAO '=' EXPRESSAO

    '='  shift, and go to state 59
    '#'  shift, and go to state 60


state 27

   27 BLOCO_COMANDOS: '{' . LISTA_COMANDOS '}'

    KW_WHEN        shift, and go to state 20
    KW_WHILE       shift, and go to state 21
    KW_FOR         shift, and go to state 22
    KW_READ        shift, and go to state 23
    KW_RETURN      shift, and go to state 24
    KW_PRINT       shift, and go to state 25
    TK_IDENTIFIER  shift, and go to state 26
    '{'            shift, and go to state 27

    ';'       reduce using rule 36 (COMANDO)
    $default  reduce using rule 29 (LISTA_COMANDOS)

    BLOCO_COMANDOS  go to state 29
    LISTA_COMANDOS  go to state 61
    COMANDO         go to state 62
    ATRIBUICAO      go to state 31
    READ            go to state 32
    PRINT           go to state 33
    RETURN          go to state 34
    CONTROLE_FLUXO  go to state 35
    WHEN_THEN       go to state 36
    WHEN_THEN_ELSE  go to state 37
    WHILE           go to state 38
    FOR             go to state 39


state 28

   20 FUNCOES: CABECALHO CORPO .

    $default  reduce using rule 20 (FUNCOES)


state 29

   35 COMANDO: BLOCO_COMANDOS .

    $default  reduce using rule 35 (COMANDO)


state 30

   26 CORPO: COMANDO . ';'

    ';'  shift, and go to state 63


state 31

   30 COMANDO: ATRIBUICAO .

    $default  reduce using rule 30 (COMANDO)


state 32

   32 COMANDO: READ .

    $default  reduce using rule 32 (COMANDO)


state 33

   33 COMANDO: PRINT .

    $default  reduce using rule 33 (COMANDO)


state 34

   34 COMANDO: RETURN .

    $default  reduce using rule 34 (COMANDO)


state 35

   31 COMANDO: CONTROLE_FLUXO .

    $default  reduce using rule 31 (COMANDO)


state 36

   72 CONTROLE_FLUXO: WHEN_THEN .

    $default  reduce using rule 72 (CONTROLE_FLUXO)


state 37

   73 CONTROLE_FLUXO: WHEN_THEN_ELSE .

    $default  reduce using rule 73 (CONTROLE_FLUXO)


state 38

   75 CONTROLE_FLUXO: WHILE .

    $default  reduce using rule 75 (CONTROLE_FLUXO)


state 39

   74 CONTROLE_FLUXO: FOR .

    $default  reduce using rule 74 (CONTROLE_FLUXO)


state 40

    7 VARIAVEL_GLOBAL: TK_IDENTIFIER ':' TIPO . VAR_GLOBAL_INIT_VEC

    LIT_INTEGER  shift, and go to state 64
    LIT_REAL     shift, and go to state 65
    LIT_CHAR     shift, and go to state 66
    '['          shift, and go to state 67

    VAR_GLOBAL_INIT_VEC  go to state 68
    VALOR                go to state 69


state 41

   21 CABECALHO: TIPO TK_IDENTIFIER '(' . LISTA_PARAMETROS ')'

    KW_BYTE    shift, and go to state 1
    KW_SHORT   shift, and go to state 2
    KW_LONG    shift, and go to state 3
    KW_FLOAT   shift, and go to state 4
    KW_DOUBLE  shift, and go to state 5

    $default  reduce using rule 23 (LISTA_PARAMETROS)

    TIPO              go to state 70
    LISTA_PARAMETROS  go to state 71


state 42

   76 WHEN_THEN: KW_WHEN '(' . EXPRESSAO ')' KW_THEN COMANDO
   77 WHEN_THEN_ELSE: KW_WHEN '(' . EXPRESSAO ')' KW_THEN COMANDO KW_ELSE COMANDO

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 52
    '!'            shift, and go to state 53

    EXPRESSAO  go to state 72


state 43

   78 WHILE: KW_WHILE '(' . EXPRESSAO ')' COMANDO

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 52
    '!'            shift, and go to state 53

    EXPRESSAO  go to state 73


state 44

   79 FOR: KW_FOR '(' . TK_IDENTIFIER '=' EXPRESSAO KW_TO EXPRESSAO ')' COMANDO

    TK_IDENTIFIER  shift, and go to state 74


state 45

   39 READ: KW_READ TK_IDENTIFIER .

    $default  reduce using rule 39 (READ)


state 46

   46 EXPRESSAO: TK_IDENTIFIER .
   47          | TK_IDENTIFIER . EXPRESSAO
   48          | TK_IDENTIFIER . '(' LISTA_FUNCAO_PARAMETROS ')'

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 75
    '!'            shift, and go to state 53

    TK_IDENTIFIER  [reduce using rule 46 (EXPRESSAO)]
    LIT_INTEGER    [reduce using rule 46 (EXPRESSAO)]
    LIT_REAL       [reduce using rule 46 (EXPRESSAO)]
    LIT_CHAR       [reduce using rule 46 (EXPRESSAO)]
    '-'            [reduce using rule 46 (EXPRESSAO)]
    '['            [reduce using rule 46 (EXPRESSAO)]
    '('            [reduce using rule 46 (EXPRESSAO)]
    '!'            [reduce using rule 46 (EXPRESSAO)]
    $default       reduce using rule 46 (EXPRESSAO)

    EXPRESSAO  go to state 76


state 47

   50 EXPRESSAO: LIT_INTEGER .

    $default  reduce using rule 50 (EXPRESSAO)


state 48

   51 EXPRESSAO: LIT_REAL .

    $default  reduce using rule 51 (EXPRESSAO)


state 49

   52 EXPRESSAO: LIT_CHAR .

    $default  reduce using rule 52 (EXPRESSAO)


state 50

   49 EXPRESSAO: '-' . EXPRESSAO

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 52
    '!'            shift, and go to state 53

    EXPRESSAO  go to state 77


state 51

   54 EXPRESSAO: '[' . EXPRESSAO ']'

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 52
    '!'            shift, and go to state 53

    EXPRESSAO  go to state 78


state 52

   53 EXPRESSAO: '(' . EXPRESSAO ')'

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 52
    '!'            shift, and go to state 53

    EXPRESSAO  go to state 79


state 53

   67 EXPRESSAO: '!' . EXPRESSAO

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 52
    '!'            shift, and go to state 53

    EXPRESSAO  go to state 80


state 54

   45 RETURN: KW_RETURN EXPRESSAO .
   55 EXPRESSAO: EXPRESSAO . '+' EXPRESSAO
   56          | EXPRESSAO . '-' EXPRESSAO
   57          | EXPRESSAO . '*' EXPRESSAO
   58          | EXPRESSAO . '/' EXPRESSAO
   59          | EXPRESSAO . '>' EXPRESSAO
   60          | EXPRESSAO . '<' EXPRESSAO
   61          | EXPRESSAO . OPERATOR_LE EXPRESSAO
   62          | EXPRESSAO . OPERATOR_GE EXPRESSAO
   63          | EXPRESSAO . OPERATOR_EQ EXPRESSAO
   64          | EXPRESSAO . OPERATOR_NE EXPRESSAO
   65          | EXPRESSAO . OPERATOR_AND EXPRESSAO
   66          | EXPRESSAO . OPERATOR_OR EXPRESSAO

    OPERATOR_LE   shift, and go to state 81
    OPERATOR_GE   shift, and go to state 82
    OPERATOR_EQ   shift, and go to state 83
    OPERATOR_NE   shift, and go to state 84
    OPERATOR_AND  shift, and go to state 85
    OPERATOR_OR   shift, and go to state 86
    '<'           shift, and go to state 87
    '>'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '*'           shift, and go to state 91
    '/'           shift, and go to state 92

    $default  reduce using rule 45 (RETURN)


state 55

   43 ELEMENTO_PRINT: LIT_STRING .

    $default  reduce using rule 43 (ELEMENTO_PRINT)


state 56

   40 PRINT: KW_PRINT LISTA_ELEMENTOS_PRINT .

    $default  reduce using rule 40 (PRINT)


state 57

   41 LISTA_ELEMENTOS_PRINT: ELEMENTO_PRINT . LISTA_ELEMENTOS_PRINT
   42                      | ELEMENTO_PRINT .

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    LIT_STRING     shift, and go to state 55
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 52
    '!'            shift, and go to state 53

    $default  reduce using rule 42 (LISTA_ELEMENTOS_PRINT)

    LISTA_ELEMENTOS_PRINT  go to state 93
    ELEMENTO_PRINT         go to state 57
    EXPRESSAO              go to state 58


state 58

   44 ELEMENTO_PRINT: EXPRESSAO .
   55 EXPRESSAO: EXPRESSAO . '+' EXPRESSAO
   56          | EXPRESSAO . '-' EXPRESSAO
   57          | EXPRESSAO . '*' EXPRESSAO
   58          | EXPRESSAO . '/' EXPRESSAO
   59          | EXPRESSAO . '>' EXPRESSAO
   60          | EXPRESSAO . '<' EXPRESSAO
   61          | EXPRESSAO . OPERATOR_LE EXPRESSAO
   62          | EXPRESSAO . OPERATOR_GE EXPRESSAO
   63          | EXPRESSAO . OPERATOR_EQ EXPRESSAO
   64          | EXPRESSAO . OPERATOR_NE EXPRESSAO
   65          | EXPRESSAO . OPERATOR_AND EXPRESSAO
   66          | EXPRESSAO . OPERATOR_OR EXPRESSAO

    OPERATOR_LE   shift, and go to state 81
    OPERATOR_GE   shift, and go to state 82
    OPERATOR_EQ   shift, and go to state 83
    OPERATOR_NE   shift, and go to state 84
    OPERATOR_AND  shift, and go to state 85
    OPERATOR_OR   shift, and go to state 86
    '<'           shift, and go to state 87
    '>'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '*'           shift, and go to state 91
    '/'           shift, and go to state 92

    '-'       [reduce using rule 44 (ELEMENTO_PRINT)]
    $default  reduce using rule 44 (ELEMENTO_PRINT)


state 59

   37 ATRIBUICAO: TK_IDENTIFIER '=' . EXPRESSAO

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 52
    '!'            shift, and go to state 53

    EXPRESSAO  go to state 94


state 60

   38 ATRIBUICAO: TK_IDENTIFIER '#' . EXPRESSAO '=' EXPRESSAO

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 52
    '!'            shift, and go to state 53

    EXPRESSAO  go to state 95


state 61

   27 BLOCO_COMANDOS: '{' LISTA_COMANDOS . '}'

    '}'  shift, and go to state 96


state 62

   28 LISTA_COMANDOS: COMANDO . ';' LISTA_COMANDOS

    ';'  shift, and go to state 97


state 63

   26 CORPO: COMANDO ';' .

    $default  reduce using rule 26 (CORPO)


state 64

   10 VALOR: LIT_INTEGER .

    $default  reduce using rule 10 (VALOR)


state 65

   11 VALOR: LIT_REAL .

    $default  reduce using rule 11 (VALOR)


state 66

   12 VALOR: LIT_CHAR .

    $default  reduce using rule 12 (VALOR)


state 67

    9 VAR_GLOBAL_INIT_VEC: '[' . LIT_INTEGER ']' VALOR_INICIALIZACAO_VETOR

    LIT_INTEGER  shift, and go to state 98


state 68

    7 VARIAVEL_GLOBAL: TK_IDENTIFIER ':' TIPO VAR_GLOBAL_INIT_VEC .

    $default  reduce using rule 7 (VARIAVEL_GLOBAL)


state 69

    8 VAR_GLOBAL_INIT_VEC: VALOR .

    $default  reduce using rule 8 (VAR_GLOBAL_INIT_VEC)


state 70

   22 LISTA_PARAMETROS: TIPO . TK_IDENTIFIER MAIS_PARAMETROS

    TK_IDENTIFIER  shift, and go to state 99


state 71

   21 CABECALHO: TIPO TK_IDENTIFIER '(' LISTA_PARAMETROS . ')'

    ')'  shift, and go to state 100


state 72

   55 EXPRESSAO: EXPRESSAO . '+' EXPRESSAO
   56          | EXPRESSAO . '-' EXPRESSAO
   57          | EXPRESSAO . '*' EXPRESSAO
   58          | EXPRESSAO . '/' EXPRESSAO
   59          | EXPRESSAO . '>' EXPRESSAO
   60          | EXPRESSAO . '<' EXPRESSAO
   61          | EXPRESSAO . OPERATOR_LE EXPRESSAO
   62          | EXPRESSAO . OPERATOR_GE EXPRESSAO
   63          | EXPRESSAO . OPERATOR_EQ EXPRESSAO
   64          | EXPRESSAO . OPERATOR_NE EXPRESSAO
   65          | EXPRESSAO . OPERATOR_AND EXPRESSAO
   66          | EXPRESSAO . OPERATOR_OR EXPRESSAO
   76 WHEN_THEN: KW_WHEN '(' EXPRESSAO . ')' KW_THEN COMANDO
   77 WHEN_THEN_ELSE: KW_WHEN '(' EXPRESSAO . ')' KW_THEN COMANDO KW_ELSE COMANDO

    OPERATOR_LE   shift, and go to state 81
    OPERATOR_GE   shift, and go to state 82
    OPERATOR_EQ   shift, and go to state 83
    OPERATOR_NE   shift, and go to state 84
    OPERATOR_AND  shift, and go to state 85
    OPERATOR_OR   shift, and go to state 86
    '<'           shift, and go to state 87
    '>'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '*'           shift, and go to state 91
    '/'           shift, and go to state 92
    ')'           shift, and go to state 101


state 73

   55 EXPRESSAO: EXPRESSAO . '+' EXPRESSAO
   56          | EXPRESSAO . '-' EXPRESSAO
   57          | EXPRESSAO . '*' EXPRESSAO
   58          | EXPRESSAO . '/' EXPRESSAO
   59          | EXPRESSAO . '>' EXPRESSAO
   60          | EXPRESSAO . '<' EXPRESSAO
   61          | EXPRESSAO . OPERATOR_LE EXPRESSAO
   62          | EXPRESSAO . OPERATOR_GE EXPRESSAO
   63          | EXPRESSAO . OPERATOR_EQ EXPRESSAO
   64          | EXPRESSAO . OPERATOR_NE EXPRESSAO
   65          | EXPRESSAO . OPERATOR_AND EXPRESSAO
   66          | EXPRESSAO . OPERATOR_OR EXPRESSAO
   78 WHILE: KW_WHILE '(' EXPRESSAO . ')' COMANDO

    OPERATOR_LE   shift, and go to state 81
    OPERATOR_GE   shift, and go to state 82
    OPERATOR_EQ   shift, and go to state 83
    OPERATOR_NE   shift, and go to state 84
    OPERATOR_AND  shift, and go to state 85
    OPERATOR_OR   shift, and go to state 86
    '<'           shift, and go to state 87
    '>'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '*'           shift, and go to state 91
    '/'           shift, and go to state 92
    ')'           shift, and go to state 102


state 74

   79 FOR: KW_FOR '(' TK_IDENTIFIER . '=' EXPRESSAO KW_TO EXPRESSAO ')' COMANDO

    '='  shift, and go to state 103


state 75

   48 EXPRESSAO: TK_IDENTIFIER '(' . LISTA_FUNCAO_PARAMETROS ')'
   53          | '(' . EXPRESSAO ')'

    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_REAL       shift, and go to state 48
    LIT_CHAR       shift, and go to state 49
    '-'            shift, and go to state 50
    '['            shift, and go to state 51
    '('            shift, and go to state 52
    '!'            shift, and go to state 53

    $default  reduce using rule 69 (LISTA_FUNCAO_PARAMETROS)

    EXPRESSAO                go to state 104
    LISTA_FUNCAO_PARAMETROS  go to state 105


state 76

   47 EXPRESSAO: TK_IDENTIFIER EXPRESSAO .
   55          | EXPRESSAO . '+' EXPRESSAO
   56          | EXPRESSAO . '-' EXPRESSAO
   57          | EXPRESSAO . '*' EXPRESSAO
   58          | EXPRESSAO . '/' EXPRESSAO
   59          | EXPRESSAO . '>' EXPRESSAO
   60          | EXPRESSAO . '<' EXPRESSAO
   61          | EXPRESSAO . OPERATOR_LE EXPRESSAO
   62          | EXPRESSAO . OPERATOR_GE EXPRESSAO
   63          | EXPRESSAO . OPERATOR_EQ EXPRESSAO
   64          | EXPRESSAO . OPERATOR_NE EXPRESSAO
   65          | EXPRESSAO . OPERATOR_AND EXPRESSAO
   66          | EXPRESSAO . OPERATOR_OR EXPRESSAO

    OPERATOR_LE   shift, and go to state 81
    OPERATOR_GE   shift, and go to state 82
    OPERATOR_EQ   shift, and go to state 83
    OPERATOR_NE   shift, and go to state 84
    OPERATOR_AND  shift, and go to state 85
    OPERATOR_OR   shift, and go to state 86
    '<'           shift, and go to state 87
    '>'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '*'           shift, and go to state 91
    '/'           shift, and go to state 92
